fix #724 - adjust post card metadata alignment/wrapping to match post header

--- a/src/views/blog-post/post-title-header/post-title-header.module.scss
+++ b/src/views/blog-post/post-title-header/post-title-header.module.scss
@@ -37,7 +37,7 @@
 	.authors,
 	.originalLink {
 		display: flex;
-		align-items: top;
+		align-items: flex-start;
 
 		svg {
 			width: var(--article-header_details_icon_size);
@@ -71,7 +71,7 @@
 
 		&__published {
 			display: flex;
-			align-items: top;
+			align-items: flex-start;
 			flex-direction: row;
 		}
 
